{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 23,
  "lineage": "2a8cb444-f707-8ef6-1083-f9d0338816ba",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:218650569701:instance/i-014e7afd5d891ee0a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014e7afd5d891ee0a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "testkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0e6d46025a1e9e65a",
            "private_dns": "ip-10-0-102-196.ec2.internal",
            "private_ip": "10.0.102.196",
            "public_ip": "44.200.235.189",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f19b6ecce436585b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049a8457ce6d6beba",
            "tags": {
              "Environment": "dev",
              "Name": "app-aws",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "app-aws",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "app-aws"
            },
            "vpc_security_group_ids": [
              "sg-0c7118b9026a8b46a"
            ]
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:internet-gateway/igw-0e921c89cea12fc64",
            "id": "igw-0e921c89cea12fc64",
            "owner_id": "218650569701",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e921c89cea12fc64",
            "id": "r-rtb-014e226312cf3524f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014e226312cf3524f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:route-table/rtb-09aae391fc83ac271",
            "id": "rtb-09aae391fc83ac271",
            "owner_id": "218650569701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:route-table/rtb-0d24184852e014ac2",
            "id": "rtb-0d24184852e014ac2",
            "owner_id": "218650569701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:route-table/rtb-03e676181f1a3c26e",
            "id": "rtb-03e676181f1a3c26e",
            "owner_id": "218650569701",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:route-table/rtb-014e226312cf3524f",
            "id": "rtb-014e226312cf3524f",
            "owner_id": "218650569701",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e921c89cea12fc64",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08faddb56d1eb6cc2",
            "route_table_id": "rtb-09aae391fc83ac271",
            "subnet_id": "subnet-0976d0fe834c6bd0c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffb663e77a1dd085",
            "route_table_id": "rtb-0d24184852e014ac2",
            "subnet_id": "subnet-057b0c728726aefce"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c82d86c6a1a80c9f",
            "route_table_id": "rtb-03e676181f1a3c26e",
            "subnet_id": "subnet-0aebf18e9282f04bd"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054d54804c44dba43",
            "route_table_id": "rtb-014e226312cf3524f",
            "subnet_id": "subnet-0109b4c02a1717808"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06747e3643c28b7a0",
            "route_table_id": "rtb-014e226312cf3524f",
            "subnet_id": "subnet-049a8457ce6d6beba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:subnet/subnet-0976d0fe834c6bd0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0976d0fe834c6bd0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218650569701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:subnet/subnet-057b0c728726aefce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057b0c728726aefce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218650569701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1b"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:subnet/subnet-0aebf18e9282f04bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aebf18e9282f04bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218650569701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-private-us-east-1a"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:subnet/subnet-0109b4c02a1717808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0109b4c02a1717808",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218650569701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:subnet/subnet-049a8457ce6d6beba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049a8457ce6d6beba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "218650569701",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-045e2a43aae0c2f30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218650569701:vpc/vpc-045e2a43aae0c2f30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02576dfc9ac598202",
            "default_route_table_id": "rtb-0db30be95d5414c6d",
            "default_security_group_id": "sg-0c7118b9026a8b46a",
            "dhcp_options_id": "dopt-01921ab299693d988",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-045e2a43aae0c2f30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db30be95d5414c6d",
            "owner_id": "218650569701",
            "tags": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc"
            },
            "tags_all": {
              "Author": "rajat.gupta03@nagarro.com",
              "Environment": "dev",
              "Name": "my-vpc"
            }
          }
        }
      ]
    }
  ]
}